--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
     "axios": "^1.3.4",
     "core-js": "^3.8.3",
+    "font-awesome": "^4.7.0",
     "json-server": "^0.17.3",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
